--- a/styles/base.css
+++ b/styles/base.css
@@ -70,7 +70,7 @@ iframe {
 }
 
 .profile-img {
-max height: 33vh;
-width: auto;
-border-radius: 50%;
+  max-height: 33vh;
+  width: auto;
+  border-radius: 50%;
 }
