--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,7 @@ body {
   font-size: 16px;
   letter-spacing: .025rem;
   background: blue;
-  color: #ff0000
+  color: #ff0000;
   font-family: 'Fjalla One', sans-serif;
 }
 
