--- a/styles/base.css
+++ b/styles/base.css
@@ -93,3 +93,12 @@ iframe {
   width: auto;
   border-radius: 50%;
 }
+  
+  
+  .Favorite-ice-cream {
+    
+  }
+  .Favorite-Game{
+    
+    {
+  .Favorite
