--- a/styles/base.css
+++ b/styles/base.css
@@ -83,9 +83,8 @@ iframe {
   margin: auto;
   padding: 3rem;
   font-size: 3rem;
-  width: auto:
-    /
-    color: #ff0000;
+  width: auto;
+  color: #ff0000;
   border:15px dotted red;
 
 .profile-img {
@@ -95,10 +94,12 @@ iframe {
 }
   
   
-  .Favorite-ice-cream {
-    
-  }
-  .Favorite-Game{
-    
-    {
-  .Favorite
+.Favorite-ice-cream {
+
+}
+.Favorite-Game{
+
+{
+.Favorite {
+  
+ }
